fancy new mixin, plus fixed visible-inline in topic OP

--- a/less/category.less
+++ b/less/category.less
@@ -69,17 +69,11 @@
 		}
 
 		.teaser-pic, .teaser-pic.user-icon {
-			width:20px;
-			height:20px;
-			line-height: 20px;
-			font-size: 1.3rem;
+			.user-icon-style(20px, 1.3rem);
 		}
 
 		.user-img, .user-icon {
-			width: 50px;
-			height: 50px;
-			line-height: 50px;
-			font-size: 2.4rem;
+			.user-icon-style(50px, 2.4rem);
 			margin-right:10px;
 		}
 	}
