--- a/less/groups.less
+++ b/less/groups.less
@@ -27,10 +27,7 @@
 				display: inline-block;
 
 				img, .user-icon {
-					width: 32px;
-					height: 32px;
-					line-height: 32px;
-					font-size: 1.5rem;
+					.user-icon-style();
 				}
 			}
 
@@ -136,9 +133,7 @@
 
 	[component="groups/members"], [component="groups/pending"], [component="groups/invited"] {
 		img, .user-icon {
-			width: 32px;
-			height: 32px;
-			line-height: 32px;
+			.user-icon-style();
 		}
 
 		.member-name {
