--- a/less/header.less
+++ b/less/header.less
@@ -2,11 +2,8 @@
 
 	#user_label {
 		img, .user-icon {
+			.user-icon-style(19px, 1rem);
 			border: 1px solid #454;
-			width: 19px;
-			height: 19px;
-			line-height: 19px;
-			font-size: 1rem;
 		}
 
 		span {
@@ -103,10 +100,7 @@
 			clear: both;
 
 			img, .user-icon {
-				width: 32px;
-				height: 32px;
-				line-height: 32px;
-				font-size: 1.5rem;
+				.user-icon-style();
 				float: left;
 			}
 
@@ -185,10 +179,7 @@
 				line-height: 30px;
 
 				img, .user-icon {
-					width: 32px;
-					height: 32px;
-					line-height: 32px;
-					font-size: 1.5rem;
+					.user-icon-style();
 					margin-right: 1em;
 				}
 			}
